# Skia

./: .cproject  .gitignore  .project  CMakeLists.txt  README  configure-qsk  index.html
bench/: SkBenchmark.h  benchmain.cpp
experimental/Intersection/: ReduceOrder_Test.cpp
gm/: gmmain.cpp
gpu/include/: GrConfig.h  GrContext.h  GrGLConfig.h  GrGLDefines.h  GrGLIndexBuffer.h  GrGLInterface.h  GrGLTexture.h  GrGLVertexBuffer.h  GrGpu.h  GrPaint.h
gpu/src/: GrContext.cpp  GrGLIndexBuffer.cpp  GrGLProgram.cpp  GrGLProgram.h  GrGLTexture.cpp  GrGLVertexBuffer.cpp  GrGpuFactory.cpp  GrGpuGL.cpp  GrGpuGL.h  GrGpuGLFixed.cpp  GrGpuGLFixed.h  GrGpuGLShaders.cpp  GrGpuGLShaders.h
gpu/src/qnx/: GrGLDefaultInterface_qnx.cpp
gyp/: SampleApp.gyp  bench.gyp  common_conditions.gypi  common_variables.gypi  everything.gyp  freetype.gyp  gentl.gyp  gentl.gypi  gpu.gyp  gpu.gypi  most.gyp  opts.gyp  ports.gyp  qnx.gyp  skia_lib.gyp  views.gyp  xml.gyp  zlib.gyp
include/config/: SkUserConfig.h
include/core/: SkClipStack.h  SkDevice.h  SkMaskFilter.h  SkOSFile.h  SkPaint.h  SkPathMeasure.h  SkPostConfig.h  SkPreConfig.h  SkRRect.h  SkRect.h  SkStream.h  SkString.h  SkTypes.h  SkUtils.h  SkXfermode.h
include/effects/: SkDiscretePathEffect.h  SkPictureImageFilter.h
include/gpu/: GentlDevice.h  GrConfig.h  SkGpuCanvas.h  SkGpuDevice.h
include/gpu/gl/: GrGLConfig.h  GrGLDefines.h  GrGLFunctions.h  GrGLInterface.h  SkGLContextHelper.h  SkNativeGLContext.h
include/images/: SkImageDecoder.h  SkImageEncoder.h
include/ports/: SkHarfBuzzFont.h
include/views/: SkOSWindow_Qnx.h  SkWindow.h
platform_tools/qnx/: gclient.config
platform_tools/qnx/skbb10/: ArcDemo.cpp  ArcDemo.h  BasicDrawing.cpp  BasicDrawing.h  BigBlur.cpp  BigBlur.h  BitmapShader.cpp  BitmapShader.h  BitmapSprite.cpp  BitmapSprite.h  CircleDemo.cpp  CircleDemo.h  ClipDemo.cpp  ClipDemo.h  DemoBase.cpp  DemoBase.h  GradientShaders.cpp  GradientShaders.h  LayerDemo.cpp  LayerDemo.h  PaintStrokeCap.cpp  PaintStrokeCap.h  PaintStrokeJoin.cpp  PaintStrokeJoin.h  PaintStyles.cpp  PaintStyles.h  PathEffects.cpp  PathEffects.h  PathFillType.cpp  PathFillType.h  Picture.cpp  Picture.h  RectDemo.cpp  RectDemo.h  Rects.cpp  Rects.h  TextDemo.cpp  TextDemo.h  TextOnPathDemo.cpp  TextOnPathDemo.h  (+8 more)
platform_tools/qnx/skbb10/assets/: layer_0.skp
rim_samples/SkiaSample/: .cproject  .project  NOTICE  README  bar-descriptor.xml
rim_samples/SkiaSample/src/: ArcDemo.cpp  ArcDemo.h  BasicDrawing.cpp  BasicDrawing.h  BitmapShader.cpp  BitmapShader.h  CircleDemo.cpp  CircleDemo.h  DemoBase.cpp  DemoBase.h  GradientShaders.cpp  GradientShaders.h  PaintStrokeCap.cpp  PaintStrokeCap.h  PaintStrokeJoin.cpp  PaintStrokeJoin.h  PaintStyles.cpp  PaintStyles.h  PathEffects.cpp  PathEffects.h  PathFillType.cpp  PathFillType.h  RectDemo.cpp  RectDemo.h  TextDemo.cpp  TextDemo.h  TextOnPathDemo.cpp  TextOnPathDemo.h  bbutil.cpp  bbutil.h  main.cpp
samplecode/: SampleApp.cpp  SampleApp.h  SampleFilterFuzz.cpp  SampleSkPicture.cpp
src/core/: SkAdvancedTypefaceMetrics.cpp  SkBitmapProcShader.cpp  SkCanvas.cpp  SkClipStack.cpp  SkConfig8888.cpp  SkDraw.cpp  SkPaint.cpp  SkPathMeasure.cpp  SkRRect.cpp  SkScan_Antihair.cpp  SkString.cpp  SkUtilsArm.cpp
src/effects/: SkBlurMask.cpp  SkBlurMask.h  SkBlurMaskFilter.cpp  SkDisplacementMapEffect.cpp  SkPictureImageFilter.cpp
src/gentl/: BuffChain.cpp  BuffChain.h  Clip.cpp  Clip.h  DisplayList.cpp  DisplayList.h  FramebufferStack.cpp  FramebufferStack.h  Generators.cpp  Generators.h  GentlCommands.h  GentlContext.cpp  GentlContext.h  GentlDevice.cpp  GentlFloatUtils.h  GentlPath.cpp  GentlPath.h  GentlTrace.h  GentlTrace_none.cpp  GentlTrace_qnx.cpp  GlyphCache.cpp  GlyphCache.h  GraphicsPrimitives.h  InstructionSet.cpp  InstructionSet.h  Layers.cpp  Layers.h  Precompile.cpp  Precompile.h  README  Shaders.cpp  Shaders.h  ShadersCache.cpp  ShadersCache.h  VertexBufferCache.cpp  VertexBufferCache.h
src/gentl/tess/: geom.c  mesh.c  priorityq.c  sweep.c  tess.c  tesselator.h
src/gpu/: GrClipMaskManager.cpp  GrGpu.h  SkGpuDevice.cpp
src/gpu/gl/: GrGLDefines.h  GrGLIndexBuffer.cpp  GrGLIndexBuffer.h  GrGLInterface.cpp  GrGLTexture.cpp  GrGLTexture.h  GrGLVertexBuffer.cpp  GrGLVertexBuffer.h  GrGpuGL.cpp  GrGpuGLShaders.cpp  SkGLContextHelper.cpp
src/gpu/gl/android/: GrGLCreateNativeInterface_android.cpp
src/gpu/gl/mac/: GrGLCreateNativeInterface_mac.cpp
src/gpu/gl/qnx/: GrGLCreateNativeInterface_qnx.cpp  SkNativeGLContext_qnx.cpp
src/gpu/gl/unix/: GrGLCreateNativeInterface_unix.cpp
src/gpu/qnx/: GrGLCreateNativeInterface_qnx.cpp
src/opts/: SkBlitRow_opts_arm.cpp
src/pdf/: SkPDFDevice.cpp
src/ports/: SkDebug_qnx.cpp  SkFontHost_FreeType.cpp  SkFontHost_fontconfig.cpp  SkFontHost_tables.cpp  SkThread_pthread.cpp
src/utils/: SkOSFile.cpp
src/views/qnx/: SkOSWindow_Qnx.cpp  skia_qnx.cpp
tests/: ClipStackTest.cpp  Test.cpp
tests/guimark2bitmap/: tmp
tests/guimark2bitmap/build-arm/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  guimark2
tools/: PictureRenderer.cpp  PictureRenderer.h  PictureRenderingFlags.cpp
